fixing dark mode intigration + only only ints and floats as input

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -590,6 +590,14 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
+.-mt-6 {
+  margin-top: -1.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -810,6 +818,10 @@ video {
   padding: 15rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -860,6 +872,11 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .hover\:bg-blue-300:hover {
